<resources>
    <string name="app_name">당근마켓</string>
    <string name="gallery_finish">완료</string>
    <string name="gallery_all_images">모든 사진</string>
    <string name="home">홈</string>
    <string name="viliage">동네생활</string>
    <string name="gps">내 근처</string>
    <string name="talk">채팅</string>
    <string name="mypage">나의 당근</string>
    <string name="write">중고거래 글쓰기</string>
    <string name="write_finish">완료</string>
    <string name="write_title">제목</string>
    <string name="write_price">가격 (선택사항)</string>
    <string name="write_content">청파동3가에 올릴 게시글 내용을 작성해주세요. 가품 및
판매금지품목은 게시가 제한될 수 있어요</string>
    <string name="dot">·</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="text_won">₩ </string>
    <string name="text_first_image">대표 사진</string>
</resources>