<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/layout_write"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".ui.view.write.WriteFragment">

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btn_back"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="9dp"
            android:layout_marginTop="13dp"
            android:background="@drawable/aos_ic_back_black_32"
            android:minWidth="0dp"
            android:minHeight="0dp"
            android:padding="0dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/tv_writing"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="49dp"
            android:layout_marginTop="21dp"
            android:text="@string/write"
            android:textColor="@color/black_212429"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            style="@style/TextAppearance.AppCompat.Headline.h3"/>

        <TextView
            android:id="@+id/tv_finish"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="onTextViewClicked"
            android:clickable="true"
            android:layout_marginTop="21dp"
            android:layout_marginEnd="16dp"
            android:layout_marginBottom="12dp"
            android:text="@string/write_finish"
            android:textColor="@color/gray_c4c4c4"
            app:layout_constraintBottom_toTopOf="@+id/v_line1"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            style="@style/TextAppearance.AppCompat.Body.b1"/>

        <View
            android:id="@+id/v_line1"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginTop="16dp"
            android:background="@color/gray_efefef"
            app:layout_constraintTop_toBottomOf="@id/tv_writing" />

        <ScrollView
            android:id="@+id/sv_write"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/v_line1">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/layout_content"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:orientation="vertical">

                <View
                    android:id="@+id/v_line2"
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:layout_marginTop="106dp"
                    android:background="@color/gray_efefef"
                    app:layout_constraintTop_toTopOf="parent" />

                <EditText
                    android:id="@+id/et_title"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="16dp"
                    android:layout_marginTop="22dp"
                    android:background="@null"
                    android:hint="@string/write_title"
                    android:maxLength="15"
                    android:textColorHint="@color/gray_c4c4c4"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="@id/v_line2"
                    style="@style/TextAppearance.AppCompat.Body.b3"/>

                <View
                    android:id="@+id/v_line3"
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:layout_marginTop="20dp"
                    android:background="@color/gray_efefef"
                    app:layout_constraintTop_toBottomOf="@id/et_title" />

                <EditText
                    android:id="@+id/et_price"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="16dp"
                    android:layout_marginTop="22dp"
                    android:background="@null"
                    android:hint="@string/write_price"
                    android:inputType="number"
                    android:maxLength="10"
                    android:textColorHint="@color/gray_c4c4c4"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="@id/v_line3"
                    style="@style/TextAppearance.AppCompat.Body.b3"/>

                <View
                    android:id="@+id/v_line4"
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:layout_marginTop="20dp"
                    android:background="@color/gray_efefef"
                    app:layout_constraintTop_toBottomOf="@id/et_price" />

                <EditText
                    android:id="@+id/et_content"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="16dp"
                    android:layout_marginTop="22dp"
                    android:layout_marginEnd="38dp"
                    android:gravity="top"
                    android:background="@null"
                    android:hint="@string/write_content"
                    android:textColorHint="@color/gray_c4c4c4"
                    android:maxLength="1000"
                    android:paddingBottom="40dp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="@id/v_line4"
                    style="@style/TextAppearance.AppCompat.Body.b3"/>
            </androidx.constraintlayout.widget.ConstraintLayout>

        </ScrollView>

    </androidx.constraintlayout.widget.ConstraintLayout>

</layout>